--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ repository = "https://github.com/KasarLabs/bitcoin-da"
 edition = "2021"
 
 [workspace.dependencies]
-
+bitcoin = "0.30.1"
+bitcoincore-rpc = "0.17.0"
