--- a/crates/relayer/Cargo.toml
+++ b/crates/relayer/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+bitcoin = { workspace = true }
+bitcoincore-rpc = { workspace = true }
 
