feat: add read_transaction

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ edition = "2021"
 [workspace.dependencies]
 bitcoin = "0.30.1"
 bitcoincore-rpc = "0.17.0"
+serde = { version = "1.0", default-features = false }
+
