:rocket: clean repo + add README

--- a/bitcoin.conf
+++ b/bitcoin.conf
@@ -14,5 +14,6 @@ rpcuser=rpcuser
 rpcpassword=rpcpass
 rpcport=8332
 wallet=test
+fallbackfee=0.0000001
 # server=1 tells Bitcoin-Qt and bitcoind to accept JSON-RPC commands
 server=1
