--- a/bitcoin.conf
+++ b/bitcoin.conf
@@ -1,13 +1,14 @@
 ##
 ## bitcoin.conf configuration file. Lines beginning with # are comments.
 ##
+
+# Bitcoin daemon
 daemon=1
 regtest=1
-
-listen=0
+#signet=1
+server=1
+txindex=1
 debug=1
-printtoconsole=1
-# JSON-RPC options (for controlling a running Bitcoin/bitcoind process)
 
 [regtest]
 rpcuser=rpcuser
@@ -15,5 +16,17 @@ rpcpassword=rpcpass
 rpcport=8332
 wallet=test
 fallbackfee=0.0000001
-# server=1 tells Bitcoin-Qt and bitcoind to accept JSON-RPC commands
 server=1
+
+[signet]
+rpcbind=0.0.0.0
+listen=1
+rpcuser=rpcuser
+rpcpassword=rpcpass
+wallet=testsignet
+rpcport=38332
+rpcallowip=0.0.0.0/0
+fallbackfee=0.00002
+# Initial block download optimizations
+#dbcache=2000
+#blocksonly=1
