--- a/crates/bitcoin-da/Cargo.toml
+++ b/crates/bitcoin-da/Cargo.toml
@@ -13,3 +13,9 @@ serde = { workspace = true }
 hex = "0.4.2"
 bitcoin_hashes = "0.12.0"
 dotenv = "0.15.0"
+log = "0.4"
+env_logger = "0.9"
+
+[features]
+regnet = []
+signet = []
