--- a/crates/bitcoin-da/Cargo.toml
+++ b/crates/bitcoin-da/Cargo.toml
@@ -16,7 +16,7 @@ bitcoin_hashes = "0.12.0"
 dotenv = "0.15.0"
 log = "0.4"
 env_logger = "0.9"
-uuid = { version = "1.4.1", features = ["v4"]}
+ethers = "2.0.10"
 
 [features]
 regtest = []
